fixed button alignment

--- a/Leet-Game-Of-Life.Web/Static/main.scss
+++ b/Leet-Game-Of-Life.Web/Static/main.scss
@@ -25,7 +25,7 @@ h1 {
 
   h1 {
     margin: 0;
-    padding: 6rem;
+    padding-top: 6rem;
   }
 
   button {
@@ -36,6 +36,7 @@ h1 {
     background-color: $leetgreen;
     width: 10rem;
     border: none;
+    margin-top: 4.5rem;
     padding: 18px 28px 16px 28px;
   }
 }
